# demo-kuzu-rel-table-group-bugs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/demo/: copy.py  copy_into_tables.py  create.py  create_tables.py  functions.py  kz_copy.py  kz_create.py  run.py
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/Activity/: Activity.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/Agent/: Agent.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/AnatomicalEntity/: AnatomicalEntity.0.parquet  AnatomicalEntity.1.parquet  AnatomicalEntity.2.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/Behavior/: Behavior.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/BehavioralFeature/: BehavioralFeature.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/BiologicalEntity/: BiologicalEntity.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/BiologicalProcess/: BiologicalProcess.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/Cell/: Cell.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/CellLine/: CellLine.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/CellularComponent/: CellularComponent.0.parquet
src/demo/data/kg2c_lite_2.8.4.full.with-metanames.dataset.parquet/nodes/ChemicalEntity/: ChemicalEntity.0.parquet  ChemicalEntity.1.parquet  (+5 more)
(+12860 files in other folders)
